# AI-Youtube-Shorts-Generator

./: .env.example  .gitignore  .npmrc  AGENTS.md  Cargo.toml  DATA_COMPLIANCE.md  LICENSE  PRIVACY_POLICY.md  README.md  TERMS_AND_CONDITIONS.md  THIRD_PARTY_NOTICES.md  main.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements-local.txt  run_admin_app  run_cutomer_app
app/src-tauri/: Cargo.toml  tauri.admin.conf.json  tauri.conf.json
app/src-tauri/bundled-runtime/: README.md  RUNTIME_INFO.txt  python3
app/src-tauri/bundled-runtime/python_legacy/: README.md  bridge_entry.py
app/src-tauri/bundled-runtime/python_legacy/shorts_generator/: config.py
app/src-tauri/capabilities/: admin.json  default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: auth.rs  auth_worker.rs  lib.rs  main.rs
app/src-tauri/src/commands/: admin.rs  auth.rs  files.rs  generate.rs  health.rs  mod.rs  privacy.rs  runtime.rs
app/src-tauri/src/core/: config.rs  contracts.rs  errors.rs  highlights.rs  mod.rs  pipeline.rs
app/src-tauri/src/runtime/: fs_output.rs  mod.rs  process_supervisor.rs  python_runtime.rs  tool_resolver.rs
app/src-tauri/tests/: admin_devolens_tests.rs  api_key_profile_tests.rs  api_mode_stage_tests.rs  auth_command_inventory_tests.rs  auth_worker_tests.rs  config_tests.rs  customer_tauri_csp_tests.rs  error_mapping_tests.rs  highlights_logic_tests.rs  muapi_client_tests.rs  parity_harness_smoke.rs  pipeline_parity_tests.rs  python_bridge_tests.rs  runtime_resolution_tests.rs  tauri_command_tests.rs  updater_plugin_config_tests.rs
(+240 files in other folders)
