[package]
name = "shorts_tauri_app"
version = "0.1.0"
edition = "2021"
default-run = "shorts_tauri_app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
rfd = "0.15"
sha2 = "0.10"
tauri-plugin-updater = "2"
license-control-suite = { path = "../../vendor/license-control-suite", default-features = false, features = ["core", "desktop-tauri", "desktop-persistence"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
